Fix the lines on the grid to not be blurry

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -33,4 +33,5 @@ main {
 	margin: 0 auto;
 	width: 100%;
 	height: 100%;
+	box-sizing: content-box;
 }
